--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -31,3 +31,13 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+
+      - name: Upload a Build Artifact
+       uses: actions/upload-artifact@v5.0.0
+       with:
+    # Artifact name
+        name: # optional, default is artifact
+    # A file, directory or wildcard pattern that describes what to upload
+        path: 
+    # The desired behavior if no files are found using the provided path.
+          
